--- a/index.html
+++ b/index.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
+<!-- El idioma -->
 <html lang="en">
 
 <head>
+    <!-- The HTML5 specification encourages web developers to use
+    the UTF-8 characters  set, wich covers almost all of the characters
+     and symbols in the world! -->
+    <meta charset="UTF-8">
+
+    <!-- https://www.w3schools.com/tags/tag_meta.asp -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
 </head>
 
 <body>
     <h1>Hola mundo</h1>
+    <h2> Hej Hej</h2>
+    <h3><strong>Hello world!</strong></h3>
+    <p>This is a <br> paragraph with a line break and a
+        <a href="https://www.w3schools.com">hyperlink</a>
+        to a very good tutorial web page.</a>
+    </p>
+    <form action="">
+        <p>
+            <label for="username">Username:</label>
+            <input type="text" name="username" id="username" title='Introduce
+        your name' autocomplete="name" />
+        </p>
+        <p>
+            <label for="surname">Surname:</label>
+            <input type="text" name="surname" id="surname" title='Introduce
+        your surname' autocomplete="surname" />
+        </p>
+        <p>
+            <label for="birthdate">Birthdate:</label>
+            <input type="date" name="birthdate" id="birthdate" title='Introduce
+        your birthdate' autocomplete="birthdate" />
+        </p>
+        <p>
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" title='Introduce
+        your email' autocomplete="email" />
+        </p>
+        <p>
+            <label for="phone">Phone:</label>
+            <input type="tel" name="phone" id="phone" title='Introduce
+        your phone' autocomplete="phone" />
+        </p>
+
+        <p>
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password" title='Introduce
+        your password' autocomplete="password" />
+        </p>
+        <p>
+            <label for="color">Color:</label>
+            <input type="color">
+        </p>
+        <input type="submit" value="Submit" />
+    </form>
 </body>
 
 </html>
