--- a/index.html
+++ b/index.html
@@ -24,34 +24,34 @@
     <form action="">
         <p>
             <label for="username">Username:</label>
-            <input type="text" name="username" id="username" title='Introduce
-        your name' autocomplete="name" />
+            <input type="text" name="username" id="username" title="Introduce
+        your name" autocomplete="name" />
         </p>
         <p>
             <label for="surname">Surname:</label>
-            <input type="text" name="surname" id="surname" title='Introduce
-        your surname' autocomplete="surname" />
+            <input type="text" name="surname" id="surname" title="Introduce
+        your surname" autocomplete="surname" />
         </p>
         <p>
             <label for="birthdate">Birthdate:</label>
-            <input type="date" name="birthdate" id="birthdate" title='Introduce
-        your birthdate' autocomplete="birthdate" />
+            <input type="date" name="birthdate" id="birthdate" title="Introduce
+        your birthdate" autocomplete="birthdate" />
         </p>
         <p>
             <label for="email">Email:</label>
-            <input type="email" name="email" id="email" title='Introduce
-        your email' autocomplete="email" />
+            <input type="email" name="email" id="email" title= "Introduce
+        your email" autocomplete="email" />
         </p>
         <p>
             <label for="phone">Phone:</label>
-            <input type="tel" name="phone" id="phone" title='Introduce
-        your phone' autocomplete="phone" />
+            <input type="tel" name="phone" id="phone" title="Introduce
+        your phone" autocomplete="phone" />
         </p>
 
         <p>
             <label for="password">Password:</label>
-            <input type="password" name="password" id="password" title='Introduce
-        your password' autocomplete="password" />
+            <input type="password" name="password" id="password" title="Introduce
+        your password" autocomplete="password" />
         </p>
         <p>
             <label for="color">Color:</label>
