Error en el autocomplete de username

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>
             <label for="username">Username:</label>
             <input type="text" name="username" id="username" title="Introduce
-        your name" autocomplete="name" />
+        your name" autocomplete="username" />
         </p>
         <p>
             <label for="surname">Surname:</label>
