--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p>
             <label for="password">Password:</label>
             <input type="password" name="password" id="password" title="Introduce
-        your password" autocomplete="password" />
+        your password" autocomplete="new-password" />
         </p>
         <p>
             <label for="color">Color:</label>
