--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <p>
             <label for="surname">Surname:</label>
             <input type="text" name="surname" id="surname" title="Introduce
-        your surname" autocomplete="surname" />
+        your surname" autocomplete="additional-name" />
         </p>
         <p>
             <label for="birthdate">Birthdate:</label>
             <input type="date" name="birthdate" id="birthdate" title="Introduce
-        your birthdate" autocomplete="birthdate" />
+        your birthdate" autocomplete="bday" />
         </p>
         <p>
             <label for="email">Email:</label>
@@ -45,7 +45,7 @@
         <p>
             <label for="phone">Phone:</label>
             <input type="tel" name="phone" id="phone" title="Introduce
-        your phone" autocomplete="phone" />
+        your phone" autocomplete="tel" />
         </p>
 
         <p>
