--- a/index.html
+++ b/index.html
@@ -25,37 +25,37 @@
         <p>
             <label for="username">Username:</label>
             <input type="text" name="username" id="username" title="Introduce
-        your name" autocomplete="username" />
+        your name" autocomplete="username" required="required" />
         </p>
         <p>
             <label for="surname">Surname:</label>
             <input type="text" name="surname" id="surname" title="Introduce
-        your surname" autocomplete="additional-name" />
+        your surname" autocomplete="additional-name" required="required"/>
         </p>
         <p>
             <label for="birthdate">Birthdate:</label>
             <input type="date" name="birthdate" id="birthdate" title="Introduce
-        your birthdate" autocomplete="bday" />
+        your birthdate" autocomplete="bday" required="required"/>
         </p>
         <p>
             <label for="email">Email:</label>
             <input type="email" name="email" id="email" title= "Introduce
-        your email" autocomplete="email" />
+        your email" autocomplete="email" required="required"/>
         </p>
         <p>
             <label for="phone">Phone:</label>
             <input type="tel" name="phone" id="phone" title="Introduce
-        your phone" autocomplete="tel" />
+        your phone" autocomplete="tel" required="required"/>
         </p>
 
         <p>
             <label for="password">Password:</label>
             <input type="password" name="password" id="password" title="Introduce
-        your password" autocomplete="new-password" />
+        your password" autocomplete="new-password" required="required"/>
         </p>
         <p>
-            <label for="color">Color:</label>
-            <input type="color">
+            <label for="color">Color: </label>
+            <input type="color" required="required">
         </p>
         <input type="submit" value="Submit" />
     </form>
