--- a/index.html
+++ b/index.html
@@ -25,33 +25,33 @@
         <p>
             <label for="username">Username:</label>
             <input type="text" name="username" id="username" title="Introduce
-        your name" autocomplete="username" required="required" />
+        your name" autocomplete="username" required="required" praceholder="username" />
         </p>
         <p>
             <label for="surname">Surname:</label>
             <input type="text" name="surname" id="surname" title="Introduce
-        your surname" autocomplete="additional-name" required="required"/>
+        your surname" autocomplete="additional-name" required="required" praceholder="additional-name" />
         </p>
         <p>
             <label for="birthdate">Birthdate:</label>
             <input type="date" name="birthdate" id="birthdate" title="Introduce
-        your birthdate" autocomplete="bday" required="required"/>
+        your birthdate" autocomplete="bday" required="required" praceholder="bday" />
         </p>
         <p>
             <label for="email">Email:</label>
-            <input type="email" name="email" id="email" title= "Introduce
-        your email" autocomplete="email" required="required"/>
+            <input type="email" name="email" id="email" title="Introduce
+        your email" autocomplete="email" required="required" praceholder="email" />
         </p>
         <p>
             <label for="phone">Phone:</label>
             <input type="tel" name="phone" id="phone" title="Introduce
-        your phone" autocomplete="tel" required="required"/>
+        your phone" autocomplete="tel" required="required" praceholder="tel" />
         </p>
 
         <p>
             <label for="password">Password:</label>
             <input type="password" name="password" id="password" title="Introduce
-        your password" autocomplete="new-password" required="required"/>
+        your password" autocomplete="new-password" required="required" praceholder="new-password"/>
         </p>
         <p>
             <label for="color">Color: </label>
