--- a/index.html
+++ b/index.html
@@ -25,33 +25,33 @@
         <p>
             <label for="username">Username:</label>
             <input type="text" name="username" id="username" title="Introduce
-        your name" autocomplete="username" required="required" praceholder="username" />
+        your name" autocomplete="username" required="required" placeholder="Username" />
         </p>
         <p>
             <label for="surname">Surname:</label>
             <input type="text" name="surname" id="surname" title="Introduce
-        your surname" autocomplete="additional-name" required="required" praceholder="additional-name" />
+        your surname" autocomplete="additional-name" required="required" placeholder="Surname" />
         </p>
         <p>
             <label for="birthdate">Birthdate:</label>
             <input type="date" name="birthdate" id="birthdate" title="Introduce
-        your birthdate" autocomplete="bday" required="required" praceholder="bday" />
+        your birthdate" autocomplete="bday" required="required" placeholder="Birthday" />
         </p>
         <p>
             <label for="email">Email:</label>
             <input type="email" name="email" id="email" title="Introduce
-        your email" autocomplete="email" required="required" praceholder="email" />
+        your email" autocomplete="email" required="required" placeholder="Email" />
         </p>
         <p>
             <label for="phone">Phone:</label>
             <input type="tel" name="phone" id="phone" title="Introduce
-        your phone" autocomplete="tel" required="required" praceholder="tel" />
+        your phone" autocomplete="tel" required="required" placeholder="Phone" />
         </p>
 
         <p>
             <label for="password">Password:</label>
             <input type="password" name="password" id="password" title="Introduce
-        your password" autocomplete="new-password" required="required" praceholder="new-password"/>
+        your password" autocomplete="new-password" required="required" placeholder="password"/>
         </p>
         <p>
             <label for="color">Color: </label>
