--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>
             <label for="birthdate">Birthdate:</label>
             <input type="date" name="birthdate" id="birthdate" title="Introduce
-        your birthdate" autocomplete="bday" required="required" placeholder="Birthday" />
+        your birthdate" autocomplete="bday" value="2022-01-01" />
         </p>
         <p>
             <label for="email">Email:</label>
@@ -51,11 +51,11 @@
         <p>
             <label for="password">Password:</label>
             <input type="password" name="password" id="password" title="Introduce
-        your password" autocomplete="new-password" required="required" placeholder="password"/>
+        your password" autocomplete="new-password" required="required" placeholder="Password"/>
         </p>
         <p>
             <label for="color">Color: </label>
-            <input type="color" required="required">
+            <input type="color" value="#0000FF">
         </p>
         <input type="submit" value="Submit" />
     </form>
